[package]
name = "nylon-run"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "nyrun"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.31", features = ["signal", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
shlex = "1"
async-trait = "0.1"
pingora = { version = "0.8.0", features = ["openssl"] }
pingora-core = { version = "0.8.0", features = ["openssl"] }
pingora-proxy = "0.8.0"
http = "1"
bytes = "1"
moka = { version = "0.12", features = ["future"] }
mimalloc = "0.1"
zip = "8.2.0"
openssl = { version = "0.10.76", default-features = false }
prometheus-client = "0.24"
instant-acme = "0.8"
rcgen = "0.14"
oci-distribution = "0.11"
tar = "0.4"
flate2 = "1"
slatedb = "0.11"
sysinfo = "0.38"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
serde_yaml = "0.9.34"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"
